[ScheduledTasks] : change mail sending format

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,8 @@ logging.level.org.hibernate.SQL=debug
 # connection. In this example we have "netgloo_blog" as database name and 
 # "root" as username and password.
 
-spring.datasource.url = jdbc:mysql://172.17.0.2:3306/projet_taa
+#spring.datasource.url = jdbc:mysql://172.17.0.2:3306/projet_taa
+spring.datasource.url = jdbc:mysql://localhost/projet_taa
 #spring.datasource.url = jdbc:mysql://mysql.istic.univ-rennes1.fr/base_16014040
 
 spring.datasource.username = root
